--- a/barq-common/Cargo.toml
+++ b/barq-common/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2021"
 
 
 [dependencies]
+clightningrpc = { git = "https://github.com/laanwj/cln4rust.git" }
+clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git" }
+clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", features = [
+    "log",
+] }
+clightningrpc-plugin-macros = { git = "https://github.com/laanwj/cln4rust.git" }
