--- a/barq-common/Cargo.toml
+++ b/barq-common/Cargo.toml
@@ -5,9 +5,7 @@ edition = "2021"
 
 
 [dependencies]
-clightningrpc = { git = "https://github.com/laanwj/cln4rust.git" }
-clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git" }
-clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", features = [
-    "log",
-] }
-clightningrpc-plugin-macros = { git = "https://github.com/laanwj/cln4rust.git" }
+# General dependencies
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+log = "0.4"
