--- a/barq-plugin/Cargo.toml
+++ b/barq-plugin/Cargo.toml
@@ -5,4 +5,13 @@ edition = "2021"
 
 
 [dependencies]
+# Core lightning-rpc dependencies
+clightningrpc = { git = "https://github.com/laanwj/cln4rust.git" }
+clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git" }
+clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", features = [
+    "log",
+] }
+clightningrpc-plugin-macros = { git = "https://github.com/laanwj/cln4rust.git" }
+
+# Barq dependencies
 barq-common = { path = "../barq-common" }
