add coffee configuration file and a simple README
Signed-off-by: Tarek <tareknaser360@gmail.com>

--- a/barq-plugin/Cargo.toml
+++ b/barq-plugin/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "barq-plugin"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
 
 [dependencies]
+# General dependencies
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+log = "0.4"
+anyhow = "1.0"
+
 # Core lightning-rpc dependencies
 clightningrpc = { git = "https://github.com/laanwj/cln4rust.git" }
 clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git" }
