--- a/barq-common/Cargo.toml
+++ b/barq-common/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
+
+# Dependencies to visualize the graph
+petgraph = "0.6"
