--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,9 @@ members = ["barq-common", "barq-plugin"]
 default-members = ["barq-common", "barq-plugin"]
 
 resolver = "2"
+
+[workspace.dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+log = "0.4"
+anyhow = "1.0"
