--- a/barq-common/Cargo.toml
+++ b/barq-common/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 
 [dependencies]
 # General dependencies
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-log = "0.4"
+serde = { workspace = true }
+serde_json = { workspace = true }
+log = { workspace = true }
+anyhow = { workspace = true }
 
 # Dependencies to visualize the graph
 petgraph = "0.6"
