--- a/barq-plugin/Cargo.toml
+++ b/barq-plugin/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 
 [dependencies]
 # General dependencies
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-log = "0.4"
-anyhow = "1.0"
+serde = { workspace = true }
+serde_json = { workspace = true }
+log = { workspace = true }
+anyhow = { workspace = true }
 
 # Core lightning-rpc dependencies
 clightningrpc = { git = "https://github.com/laanwj/cln4rust.git" }
